--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Build Twilar",
+      "label": "Build App",
       "type": "process",
       "command": "xcodebuild",
       "args": [
